force-app/main/default/objects/User/fields/Display_Finance_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Display_Finance_Reminder__c</fullName>
    <formula>DAY(TODAY()) &lt;= 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Finance Reminder</label>
    <type>Checkbox</type>
</CustomField>