force-app/main/default/objects/User/fields/Last_Login_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Login_Reminder_Sent__c</fullName>
    <description>When the last login reminder was sent to the user. Used to send login reminders from GmsLoggedInEmailHandler</description>
    <label>Last Login Reminder Sent</label>
    <type>Date</type>
</CustomField>