force-app/main/default/objects/User/fields/Portal_Role__c.field-meta.xml
<CustomField>
    <fullName>Portal_Role__c</fullName>
    <description>Picklist field to identify role of user over and above role hierarchy/profile etc. For use in LWR to configure component visibility</description>
    <label>Portal Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consortium Member</fullName>
            </value>
            <value>
                <fullName>Grant Recipient Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>