force-app/main/default/objects/User/fields/Portal_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Portal_Scheme__c</fullName>
    <label>Portal Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WHLG</fullName>
            </value>
            <value>
                <fullName>SHF3</fullName>
            </value>
            <value>
                <fullName>SHFCF</fullName>
            </value>
            <value>
                <fullName>SHFSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>