force-app/main/default/objects/User/listViews/Customer_Community_Plus_Login_Users.listView-meta.xml
<ListView>
    <fullName>Customer_Community_Plus_Login_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>DESNZ</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>DESNZ - Warm Homes GR Community Plus Login User</value>
    </filters>
    <label>Customer Community Plus Login Users</label>
</ListView>