force-app/main/default/objects/User/listViews/DESNZ_Delivery_Partner_PSO.listView-meta.xml
<ListView>
    <fullName>DESNZ_Delivery_Partner_PSO</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>DESNZ Warm Homes Delivery Partner User</value>
    </filters>
    <label>DESNZ - Delivery Partner PSO</label>
</ListView>