force-app/main/default/objects/User/listViews/DESNZ_Department_Delivery_Official.listView-meta.xml
<ListView>
    <fullName>DESNZ_Department_Delivery_Official</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>DESNZ Warm Homes Department Delivery Official User</value>
    </filters>
    <label>DESNZ Department Delivery Official</label>
</ListView>