force-app/main/default/objects/User/listViews/DESNZ_Grant_Recipient_Portal_users_CF.listView-meta.xml
<ListView>
    <fullName>DESNZ_Grant_Recipient_Portal_users_CF</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>Portal_Role__c</columns>
    <columns>Portal_Scheme__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>DESNZ - Warm Homes GR Community Plus Login User</value>
    </filters>
    <filters>
        <field>Portal_Scheme__c</field>
        <operation>contains</operation>
        <value>SHFCF,SHFSP</value>
    </filters>
    <label>DESNZ - Grant Recipient Portal users CF</label>
</ListView>