force-app/main/default/objects/User/listViews/DESNZ_IFF_Research_Team.listView-meta.xml
<ListView>
    <fullName>DESNZ_IFF_Research_Team</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>contains</operation>
        <value>IFF Research Team</value>
    </filters>
    <label>DESNZ  IFF Research Team</label>
</ListView>